# the-full-stack

./: .env.vault  .gitignore  .overcommit.yml  .pdm-python  .tool-versions  LICENSE  README.md  pyproject.toml
.cloudbees/workflows/: my-workflow.yaml
src/the_full_stack/: main.py
src/the_full_stack/models/: gpt_request.py  message.py
